--- a/HesapUI/Base.lproj/Main.storyboard
+++ b/HesapUI/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="45"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="70"/>
+                                </variation>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZUL-DY-90N">
                                 <rect key="frame" x="16" y="257" width="361" height="553"/>
